@@ -1,9 +1,9 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin tar n 0.2]
+[manpage_begin tar n 0.3]
 [moddesc   {Tar file handling}]
 [titledesc {Tar file creation, extraction & manipulation}]
 [require Tcl 8.4]
-[require tar [opt 0.2]]
+[require tar [opt 0.3]]
 [description]
 
 
